--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,25 @@
 /cmake-build-debug/CMakeFiles/ex4.dir/progress.make
 /cmake-build-debug/CMakeFiles/progress.marks
 /cmake-build-debug/CMakeFiles/TargetDirectories.txt
+/.idea/.gitignore
+/.idea/.name
+/cmake-build-debug/CMakeFiles/Progress/2
+/cmake-build-debug/CMakeFiles/Progress/3
+/cmake-build-debug/CMakeFiles/Project2.dir/build.make
+/cmake-build-debug/CMakeFiles/Project2.dir/cmake_clean.cmake
+/cmake-build-debug/CMakeFiles/Progress/count.txt
+/cmake-build-debug/CMakeFiles/ex4.dir/CXX.includecache
+/cmake-build-debug/CMakeFiles/ex4.dir/depend.internal
+/cmake-build-debug/CMakeFiles/Project2.dir/depend.make
+/cmake-build-debug/CMakeFiles/Project2.dir/DependInfo.cmake
+/cmake-build-debug/ex4
+/cmake-build-debug/CMakeFiles/Project2.dir/flags.make
+/cmake-build-debug/CMakeFiles/Project2.dir/link.txt
+/cmake-build-debug/CMakeFiles/ex4.dir/main.cpp.o
+/.idea/misc.xml
+/.idea/modules.xml
+/cmake-build-debug/CMakeFiles/Project2.dir/progress.make
+/cmake-build-debug/Project2.cbp
+/.idea/Project2.iml
+/.idea/inspectionProfiles/Project_Default.xml
+/.idea/vcs.xml
