--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(ex4)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(ex4 main.cpp CacheManager.h ClientHandler.h FIleCacheManager.cpp FIleCacheManager.h MySerialServer.h
+add_executable(ex4 main.cpp CacheManager.h ClientHandler.h FileCacheManager.cpp FileCacheManager.h MySerialServer.h
         MySerialServer.cpp MyTestClientHandler.h MyTestClientHandler.cpp Server.h Solver.h)
