--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,5 @@ project(ex4)
 set(CMAKE_CXX_STANDARD 14)
 
 add_executable(ex4 main.cpp CacheManager.h ClientHandler.h FileCacheManager.cpp FileCacheManager.h MySerialServer.h
-        MySerialServer.cpp MyTestClientHandler.h MyTestClientHandler.cpp Server.h Solver.h)
+        MySerialServer.cpp MyTestClientHandler.h MyTestClientHandler.cpp Server.h Solver.h StringReverser.cpp
+        StringReverser.h)
