--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,4 @@
 /cmake-build-debug/CMakeFiles/ex4.dir/FileCacheManager.cpp.o
 /cmake-build-debug/CMakeFiles/ex4.dir/MySerialServer.cpp.o
 /cmake-build-debug/CMakeFiles/ex4.dir/MyTestClientHandler.cpp.o
+/cmake-build-debug/CMakeFiles/ex4.dir/StringReverser.cpp.o
