--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,5 @@ set(CMAKE_CXX_STANDARD 14)
 add_executable(ex4 main.cpp CacheManager.h ClientHandler.h FileCacheManager.cpp FileCacheManager.h MySerialServer.h
         MySerialServer.cpp MyTestClientHandler.h MyTestClientHandler.cpp Server.h Solver.h StringReverser.cpp
         StringReverser.h Searchable.h PriorityQueueSearcher.h State.h Matrix.h Point.cpp Point.h BestFirstSearch.h
-        ISearcher.h Searcher.h)
+        AStar.h
+        ISearcher.h Searcher.h BreadthFirstSearch.h)
