--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,4 @@ add_executable(ex4 main.cpp CacheManager.h ClientHandler.h FileCacheManager.cpp 
         MySerialServer.cpp MyTestClientHandler.h MyTestClientHandler.cpp Server.h Solver.h StringReverser.cpp
         StringReverser.h Searchable.h PriorityQueueSearcher.h State.h Matrix.h Point.cpp Point.h BestFirstSearch.h
         AStar.h
-        ISearcher.h Searcher.h BreadthFirstSearch.h)
+        ISearcher.h Searcher.h BreadthFirstSearch.h DepthFirstSearch.h)
