--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,6 @@
 /cmake-build-debug/CMakeFiles/ex4.dir/MySerialServer.cpp.o
 /cmake-build-debug/CMakeFiles/ex4.dir/MyTestClientHandler.cpp.o
 /cmake-build-debug/CMakeFiles/ex4.dir/StringReverser.cpp.o
+/cmake-build-debug/CMakeFiles/ex4.dir/MatrixSolver.cpp.o
+/cmake-build-debug/CMakeFiles/ex4.dir/MyMatrixClientHandler.cpp.o
+/cmake-build-debug/CMakeFiles/ex4.dir/Point.cpp.o
