--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,4 @@
 /cmake-build-debug/CMakeFiles/ex4.dir/MatrixSolver.cpp.o
 /cmake-build-debug/CMakeFiles/ex4.dir/MyMatrixClientHandler.cpp.o
 /cmake-build-debug/CMakeFiles/ex4.dir/Point.cpp.o
+/cmake-build-debug/CMakeFiles/ex4.dir/MyParallelServer.cpp.o
